feat(backend): add personal bingo board to user and simplify crud
