# backend/docs/swagger.json
@@ -34,17 +34,6 @@
                     "Bingo Board"
                 ],
                 "summary": "Create bingo board.",
-                "parameters": [
-                    {
-                        "description": "Bingo Board Name",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.CreateBingoBoardDto"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -97,7 +86,7 @@
                         "Token": []
                     }
                 ],
-                "description": "Delete a bingo board.",
+                "description": "Irrevocably delete a bingo board.",
                 "consumes": [
                     "application/json"
                 ],
@@ -108,15 +97,6 @@
                     "Bingo Board"
                 ],
                 "summary": "Delete bingo board.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bingo Board ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -474,14 +454,6 @@
                 }
             }
         },
-        "models.CreateBingoBoardDto": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "models.UserDto": {
             "type": "object",
             "properties": {
@@ -505,6 +477,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "personal_bingo_board": {
+                    "$ref": "#/definitions/models.BingoBoardDto"
                 },
                 "reddit_url": {
                     "type": "string"
